# DirWatcher

./: .gitignore  CMakeLists.txt  DDirWatcher.cpp  DDirWatcher.hpp  DDirWatcherDataItem.cpp  DDirWatcherDataItem.hpp  DDirWatcherHandler.cpp  DDirWatcherHandler.hpp  DDirWatcherInputHandler.cpp  DDirWatcherInputHandler.hpp  DDirWatcherMarshallerHandler.cpp  DDirWatcherMarshallerHandler.hpp  DDirWatcherOutputHandler.cpp  DDirWatcherOutputHandler.hpp  FirstNode.cfg  LastNode.cfg  README.md  main.cpp
SampleData/: Events.xml  README.md  index.html
cmake/Modules/: Findfswatch.cmake
